# aodata

./: README.md  docker-compose.yml
backend/aodata-api/: .dockerignore  .env  .env.prod  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/aodata-api/.sqlx/: query-064da8279692f75942454418ce5231697e17e87350a1788ac022c486e6d8ffe8.json  query-0c2727a07aa42a9db07c78aefcc1b88e14214357e817132f14ffd05e87f49eff.json  query-0c544de2638bbdb36bea4cab544a35b6f1a920c3c7a995d3c7c8984de1b8223e.json  query-15d527d67817f727bda367c79d3e66c6ab14237c9b49078e3dc6435b0a45bd63.json  query-164352cf2c1fd20245ac1e202ec41b4fe0d97245dc757acedf16cd87142808d8.json  query-285f5b1ff532862366b6a31f74fa437c03feb615382630402de0c71467904297.json  query-2a16b7582601d14395b3aa5293f743e1b20244d72853d1edcc522bfaff444b4f.json  query-2b53845413525bd285b156942ff16dc9c49e8f49ee27d42625bfb1d6468ce893.json  query-34d3dd1220eaea2d082386eaff5616d933b16b142edb1f61dd6c9a408829b85d.json  query-35abe8809a3a612b26a5091823713b59d32282137ccb61ee1973ba791c5be29d.json  query-3b3142f996536afd7b2232f16f8052fe11211723ea94306a07d34321aac4a430.json  query-3bbad65c43f9f00c27b62c04ce0611ed53c40c5abb57035d2ee467efc766fd15.json  query-40c01efbf2753a216f09ae63f9388e0459bfe94cc5d945601046650b778629e0.json  query-46f4164dbe359aee7775f1ecf936f1414e1553a201a3366c15aa89186eddaf5b.json  query-4d516a9b04d8d5193418476ce9713b3a92ff602a431f01e13ca1206291b998a9.json  query-517d9752df1fb0031613432b8ef0872c69342a0a0e3753747d8ef6969e606860.json  query-57b05c06a6c7c832048b57492285707773f7591144808a4f854482c2eb4bdfe9.json  (+42 more)
backend/aodata-api/src/: main.rs
backend/aodata-models/: Cargo.toml
backend/aodata-nats-orders/: .env  .env.prod  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
(+104 files in other folders)
