[package]
name = "aodata-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.193" }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "macros", "runtime-tokio", "time", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
